force-app/main/default/objects/Cart_Item__c/Cart_Item__c.object-meta.xml
<CustomObject>
    <label>Item in Cart</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cart Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>