force-app/main/default/objects/Cart_Item__c/fields/Product_Price__c.field-meta.xml
<CustomField>
    <fullName>Product_Price__c</fullName>
    <label>Product Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>