force-app/main/default/objects/Cart_Item__c/fields/Product_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Product_Quantity__c</fullName>
    <label>Product Quantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>