force-app/main/default/objects/Cart_Item__c/fields/Product_Size__c.field-meta.xml
<CustomField>
    <fullName>Product_Size__c</fullName>
    <label>Product Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>